# HTTPserver

./: .gitignore  CMakeLists.txt  README.md  main.cpp  myserver  rethink.txt  server  think.txt
bad-bad-bad/: .gitignore  README.md  client.cpp  think.txt
bad-bad-bad/include/aux/: TimeCtr.hpp
bad-bad-bad/include/server/: nserver.hpp  server.hpp
bad-bad-bad/lib/: CMakeLists.txt
bad-bad-bad/src/: CMakeLists.txt  TimeCtr.cpp  head.cpp  send.cpp
epolltest/: client_test  client_test.cpp  epoll_test  epoll_test.cpp  epoll_test_et  epoll_test_et.cpp
include/: Epoll.hpp  Event.hpp  Handle.hpp  Http.hpp  Send.hpp  Server.hpp  StaticNums.hpp  Sub.hpp  Time.hpp  Timer.hpp  Util.hpp  factory.hpp  head.h  head.hpp  http.hpp  info.hpp  send.hpp  server.hpp  threadpool.hpp
include/aux/: threadpool.hpp
include/log/: logger.hpp
include/server/: send.hpp
lib/: CMakeLists.txt
lib/include/: ConnectDB.hpp
lib/src/: db.cpp
src/: CMakeLists.txt  Epoll.cpp  Epool.cpp  Handle.cpp  Http.cpp  Http.hpp  Send.cpp  Server.cpp  Time.cpp  db.cpp  head.cpp  http.cpp  main.cpp  send.cpp  server.cpp  sub.cpp
